# Cinecoder.Samples

./: .gitignore  .gitmodules  CMakeLists.txt  Cinecoder.Samples.sln  README.md  appveyor.yml  build-linux.sh  build_samples-linux-arm64.sh  build_samples-linux.sh  build_samples-mac-arm64.sh  build_samples-mac.sh  build_samples.sh  cinecoder_error_handler.h  cinecoder_license_string.cs  cinecoder_license_string.h  dockerfile  dockerfile.arm64  generate_version.ps1  get-external-libraries.ps1  inject_license.sh  nuget.config  packages.config  set_version.ps1
.teamcity/: pom.xml  settings.kts
Cinecoder.Samples/: Cinecoder.Samples.cpp  Cinecoder.Samples.vcxproj  Cinecoder.Samples.vcxproj.filters  ReadMe.txt  stdafx.cpp
Daniel2.Benchmark/: CMakeLists.txt  Daniel2.Benchmark.cpp  Daniel2.Benchmark.vcxproj  Daniel2.Benchmark.vcxproj.filters  cpu_load_meter.h  cuda_defines.h  dummy_consumer.h  file_writer.h  helper_funcs.h  implement_iunknown_static.h  mem_alloc.h  packages.config
Daniel2.DPXEncoder/: CEncoderTest.cpp  CEncoderTest.h  CMakeLists.txt  CudaMemAlloc.cpp  Daniel2.DPXEncoder.cpp  Daniel2.DPXEncoder.vcxproj  Daniel2.DPXEncoder.vcxproj.filters  Daniel2.Encoder.FileReadMT.vcxproj  dpx_file.h  filework.h  packages.config  stdafx.h
Daniel2.Encoder.FileReadMT/: CEncoderTest.cpp  CEncoderTest.h  CudaMemAlloc.cpp  Daniel2.Encoder.FileReadMT.cpp  Daniel2.Encoder.FileReadMT.vcxproj  Daniel2.Encoder.FileReadMT.vcxproj.filters  ReadMe.txt  dpx_file.h  packages.config  stdafx.cpp  stdafx.h
Daniel2.Google.Tests/: CDaniel2Encoding.cpp  CEncoderTest.h  Daniel2.Google.Tests.vcxproj  packages.config  pch.h
Daniel2.MXFTranscoder/: Daniel2.MXFTranscoder.csproj  Dec2EncAdapter.cs  Program.cs  VideoFileReader.cs  packages.config
Daniel2.MXFTranscoder/Properties/: AssemblyInfo.cs
Daniel2.Managed.Tests/: CinecoderInstancing.cs  Daniel2.Managed.Tests.csproj  packages.config
Daniel2.Managed.Tests/Properties/: AssemblyInfo.cs
Daniel2.Native.Tests/: CDaniel2Encoding.cpp  CEncoderTest.cpp  Daniel2.Native.Tests - Copy.vcxproj  Daniel2.Native.Tests.vcxproj  Daniel2.Native.Tests.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
Daniel2.NetCore.Tests/: Daniel2.NetCore.Tests.sln
Daniel2.SimplePlayerGL/: AudioSource.cpp  AudioSource.h  BaseGPURender.cpp  BaseGPURender.h  Block.cpp  Block.h  CLI.h  CL_ListErrors.h  CMakeLists.txt  CinecoderErrorHandler.h  Daniel2.SimplePlayerGL.cpp  Daniel2.SimplePlayerGL.vcxproj  Daniel2.SimplePlayerGL.vcxproj.filters  DecodeDaniel2.cpp  DecodeDaniel2.h  GPURenderDX.cpp  GPURenderDX.h  GPURenderGL.cpp  GPURenderGL.h  ReadFileDN2.cpp  ReadFileDN2.h  SimpleDecodeDN2.cpp  SimpleDecodeDN2.sln  SimpleDecodeDN2.vcxproj  SimpleDecodeDN2.vcxproj.filters  SimplePlayerGL.h  Timer.h  cudaDefines.h  cudaconvertDefines.h  cudaconvertDefines.hpp  packages.config  stdafx.cpp  stdafx.h
Daniel2.SimplePlayerGL.linux/: Daniel2.SimplePlayerGL.cbp  Daniel2.SimplePlayerGL.depend  Daniel2.SimplePlayerGL.layout  Makefile
Daniel2.SimplePlayerGL.vcxproj/: Daniel2.SimplePlayerGL.vcxproj  Daniel2.SimplePlayerGL.vcxproj.filters  packages.config
Daniel2.SimplePlayerGL.xcodeproj/: project.pbxproj
Daniel2.SimplePlayerGL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Daniel2.SimplePlayerGL/Audio/: Sound.cpp  Sound.h  SoundDS.cpp  SoundDS.h
Daniel2.SimplePlayerGL/Shaders/: PShader.h  VShader.h
Daniel2.SimplePlayerGL/SimpleDecodeDN2/: Block.cpp  Block.h  DecodeDaniel2.h  DecodeDaniel2Simple.h  ReadMe.txt  SimpleDecodeDN2.cpp  SimpleDecodeDN2.vcxproj  SimpleDecodeDN2.vcxproj.filters
Daniel2.SimplePlayerGL/SimpleDecodeDN2.xcodeproj/: project.pbxproj
Daniel2.SimplePlayerGL/SimpleDecodeDN2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Daniel2.SimplePlayerGL/SimpleDecodeDN2.xcodeproj/project.xcworkspace/xcuserdata/cinegydev_01.xcuserdatad/: UserInterfaceState.xcuserstate
Daniel2.SimplePlayerGL/SimpleDecodeDN2.xcodeproj/xcuserdata/cinegydev_01.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Daniel2.SimplePlayerGL/SimpleDecodeDN2.xcodeproj/xcuserdata/cinegydev_01.xcuserdatad/xcschemes/: SimpleDecodeDN2.xcscheme  SimpleDecodeDN2_release.xcscheme  xcschememanagement.plist
Daniel2.SimplePlayerGL/Toolkits/: ReadMe.txt
Daniel2.SimplePlayerGL/Toolkits/Cinecoder/MacOS/lib/release/: libCinecoder.dylib.REMOVED.git-id
Daniel2.SimplePlayerGL/Toolkits/Utils/: comptr.h
Daniel2.SimplePlayerGL/Toolkits/winclude/: guiddef.h  msvc_stub.h  wtypes.h
Daniel2.SimplePlayerGL/utils/: HMTSTDUtil.h  comptr.h  simpl_queue.h
Daniel2.SimplePlayerGL/winclude/: Unknwn.h  rpc.h  rpcndr.h  winerror.h
SimpleAudioDecoder/: AudioWriterCallback.cs  Program.cs  SimpleAudioDecoder.csproj  cinecoder_error_handler.cs  packages.config
SimpleAudioDecoder/Properties/: AssemblyInfo.cs
SimpleAudioEncoder/: Program.cs  SimpleAudioEncoder.csproj  packages.config
SimpleAudioEncoder/Properties/: AssemblyInfo.cs
SimpleBenchmark/: Dockerfile  Program.cs  SimpleBenchmark.csproj  SimpleBenchmark.sln
SimpleBenchmark/Cinecoder/: CinecoderFactory.cs  DecoderCallback.cs  DemuxerCallback.cs  MuxerCallback.cs
SimpleBenchmark/Extensions/: ObjectExtensions.cs
SimpleBenchmark/Helpers/: Product.cs
SimpleBenchmark/Properties/: launchSettings.json
SimpleVideoDecoder/: CMakeLists.txt  SimpleVideoDecoder.cpp  SimpleVideoDecoder.vcxproj  SimpleVideoDecoder.vcxproj.filters  bmp_writer.h  packages.config  ppm_writer.h
SimpleVideoEncoder/: CMakeLists.txt  SimpleVideoEncoder.cpp  SimpleVideoEncoder.vcxproj  SimpleVideoEncoder.vcxproj.filters  file_writer.h  packages.config
appveyor-tools/: readme.md
cmake_scripts/: FindCUDAConvertLib.cmake  FindCinecoder.Plugin.Multiplexers.cmake  FindCinecoder.cmake
common/: c_unknown.h  cinecoder_error_handler.cs  cinecoder_license_string.cs  cinecoder_license_string.cs.enc  cinecoder_license_string.h.enc  cinecoder_license_string_example.h  com_ptr.h  conio.h  cpu_load_meter.h  cuda_dyn_declare.h  cuda_dyn_load.h  dib_draw.h  framebuffer.h  inject-license.ps1  opencl_def_cl.h  opencl_def_cl_gl.h  opencl_dyn_load.h  read_file.h  vga@font.inc
(+20 files in other folders)
